--- a/Project/workspace/MapYou/res/values/strings.xml
+++ b/Project/workspace/MapYou/res/values/strings.xml
@@ -15,8 +15,6 @@
     <string name="Send_Partecipation">Send partecipation</string>
     <string name="Request_Partecipation">Request partecipation</string>
     <string name="View_MapMe">Your MapMe</string>
-    <string name="Info">About</string>
-    <string name="Help">Help</string>
     <string name="Menu">MapYou</string>
     <string name="Home">Home</string>
     <string name="Profile">Profile</string>
@@ -36,24 +34,27 @@
     <!-- **** String Face **** -->
     <string name="appId">1516574998563667</string>
 
-     <!-- **** List of String for Drawer **** -->
+    <!-- **** List of String for Drawer **** -->
     <array name="nav_drawer_icons">
         <item>@drawable/home</item>
         <item>@drawable/profile</item>
+        <item>@drawable/rate</item>
         <item>@drawable/help</item>
         <item>@drawable/info</item>
-      
     </array>
     <array name="nav_drawer_items">
         <item>@string/Home</item>
         <item>@string/Profile</item>
+        <item>@string/Rate</item>
         <item>@string/Help</item>
         <item>@string/Info</item>
     </array>
 
-     <!-- **** String Profile **** -->
-        <string name="logout">Log out</string>
-         <string name="yourprofil">Profile:</string>
-      
-     
+    <!-- **** String Profile **** -->
+    <string name="logout">Log out</string>
+    <string name="yourprofil">Profile:</string>
+    <string name="Rate">Rate</string>
+    <string name="Info">About</string>
+    <string name="Help">Help</string>
+
 </resources>
